simplify route naming
